# Social-Gaming-Platform

./: README.md
social-gaming-platform/: CMakeLists.txt  README.md
social-gaming-platform/include/data/: configuration.h  data.h  data_node.h  errors.h  game_state_object.h
social-gaming-platform/include/data/game/: game_file.h  manager.h
social-gaming-platform/include/data/session/: helpers.h  manager.h  player.h  session.h
social-gaming-platform/include/logic/: GameProcess.h
social-gaming-platform/include/logic/interpreter/: Interpreter.h  InterpreterState.h
social-gaming-platform/include/logic/parsers/: Grammar.h  IParser.h
social-gaming-platform/include/logic/parsers/rule_specifications/: AssignmentRuleSpecification.h  BaseRuleSpecification.h
social-gaming-platform/include/logic/parsers/tree_sitter/: AssignmentSpecBuilder.h  Parser.h  ParsingUtils.h  TSParser.h  TSRuleSpecFactory.h
social-gaming-platform/include/logic/rules/: AssignmentRule.h  IRule.h  RuleSupport.h
social-gaming-platform/include/logic/scheduler/: ProcessTraits.h  Scheduler.h
social-gaming-platform/src/: CMakeLists.txt  main.cpp
social-gaming-platform/src/data/: CMakeLists.txt  configuration.cpp  data_node.cpp  errors.cpp  game_state_object.cpp
social-gaming-platform/src/data/game/: manager.cpp
social-gaming-platform/src/data/session/: helpers.cpp  manager.cpp
social-gaming-platform/src/logic/: CMakeLists.txt  GameProcess.cpp  README.md
social-gaming-platform/src/logic/interpreter/: Interpreter.cpp  InterpreterState.cpp
social-gaming-platform/src/logic/parsers/: CMakeLists.txt  Grammar.cpp
social-gaming-platform/src/logic/parsers/tree_sitter/: AssignmentSpecBuilder.cpp  Parser.cpp  ParsingUtils.cpp  TSParser.cpp  TSRuleSpecFactory.cpp
social-gaming-platform/src/logic/rules/: AssignmentRule.cpp
social-gaming-platform/test/: CMakeLists.txt  dataNodeTests.cpp  dataNodeWrapperTests.cpp
social-gaming-platform/test/logic/: SchedulerTests.cpp  TestInterpreter.cpp  TestInterpreterState.cpp
social-gaming-platform/test/logic/parsers/: TestTSParser.cpp  TestTSRuleSpecFactory.cpp
social-gaming-platform/test/logic/rules/: TestAssignmentRule.cpp
